--- a/public/about/index.html
+++ b/public/about/index.html
@@ -123,17 +123,19 @@
     <div class="row">
       <div class="col-md-8">
         <ul>
-<li><strong>About me</strong></li>
+<li>
+<p><strong>About me</strong><br>
+My name is Xuan Zhang, and I come from China. I did my undergrad at <strong>Sun Yat-sen University</strong> studying a major of financial management. I chose to study at <strong>London Business School</strong> to explore a different culture and different possibilities of life.</p>
+</li>
+<li>
+<p><strong>My hobbies</strong><br>
+In my spare time, I enjoy swimming, dancing and singing. I practised ballet for more than 12 years, and I am a big fan of Britpop bands such as Oasis, Blur, Radiohead and Coldplay.</p>
+</li>
+<li>
+<p><strong>My hometown</strong><br>
+I have lived in <a href="https://en.wikipedia.org/wiki/Guangzhou">Guangzhou</a> (also called Canton), China for all my life. Guangzhou is the 3rd largest city in China, and Cantonese is the native language here. Our culture is similar to that of Hong Kong, as both have the same origin. Cantonese cuisine is famous around the world, and &ldquo;糯米鸡&rdquo;(a type of dim-sum) is my favourite.</p>
+</li>
 </ul>
-<p>My name is Xuan Zhang, and I come from China. I did my undergrad at <strong>Sun Yat-sen University</strong> studying a major of financial management. I chose to study at <strong>London Business School</strong> to explore a different culture and different possibilities of life.</p>
-<ul>
-<li><strong>My hobbies</strong></li>
-</ul>
-<p>In my spare time, I enjoy swimming, dancing and singing. I practised ballet for more than 12 years, and I am a big fan of Britpop bands such as Oasis, Blur, Radiohead and Coldplay.</p>
-<ul>
-<li><strong>About my hometown</strong></li>
-</ul>
-<p>I have lived in <a href="https://en.wikipedia.org/wiki/Guangzhou">Guangzhou</a> (also called Canton), China for all my life. Guangzhou is the 3rd largest city in China, and Cantonese is the native language here. Our culture is similar to that of Hong Kong, as both have the same origin. Cantonese cuisine is famous around the world, and &ldquo;糯米鸡&rdquo;(a type of dim-sum) is my favourite.</p>
 
       </div>
       <div class="col-md-4 text-center drag-lg-top">
