--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,7 @@
         
         <div class="col-lg-4 col-6 mb-4 shuffle-item">
           <div class="position-relative rounded hover-wrapper">
-            <img src="/images/portfolio/life.jpg" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
+            <img src="/images/portfolio/finance.jpg" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
             <div class="hover-overlay">
               <div class="hover-content">
                 <a class="btn btn-light btn-sm" href="/portfolio/project-3/">view project</a>
