--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -206,7 +206,7 @@
       
       <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;data-analytics&quot;,&quot;group-project&quot;]">
         <div class="position-relative rounded hover-wrapper">
-          <img src="/images/portfolio/life.jpg" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
+          <img src="/images/portfolio/finance.jpg" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="/portfolio/project-3/">view project</a>
