--- a/public/portfolio/project-3/index.html
+++ b/public/portfolio/project-3/index.html
@@ -135,7 +135,7 @@
               <i class="ti-folder"></i>
               <div class="ml-3">
                 <h4>Categories</h4>
-                <p>Data analytics, group project</p>
+                <p>Data analytics, finance, group project</p>
               </div>
             </div>
           </div>
