--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-11 mx-auto">
-          <h1 class="text-white font-tertiary">Hi! I’m <br> Olivia <br> Student at LBS</h1>
+          <h1 class="text-white font-tertiary">Hi! I’m <br> Olivia <br> Student at London Business School</h1>
         </div>
       </div>
     </div>
@@ -389,17 +389,6 @@
             <div class="hover-overlay">
               <div class="hover-content">
                 <a class="btn btn-light btn-sm" href="/portfolio/project-2/">view project</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-        <div class="col-lg-4 col-6 mb-4 shuffle-item">
-          <div class="position-relative rounded hover-wrapper">
-            <img src="/images/portfolio/item-6.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
-            <div class="hover-overlay">
-              <div class="hover-content">
-                <a class="btn btn-light btn-sm" href="/portfolio/project-6/">view project</a>
               </div>
             </div>
           </div>
