--- a/public/portfolio/project-2/index.html
+++ b/public/portfolio/project-2/index.html
@@ -132,6 +132,16 @@
           
           <div class="col-sm-6 mb-5">
             <div class="project-meta">
+              <i class="ti-user"></i>
+              <div class="ml-3">
+                <h4>Author</h4>
+                <p>Olivia Zhang</p>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-sm-6 mb-5">
+            <div class="project-meta">
               <i class="ti-folder"></i>
               <div class="ml-3">
                 <h4>Categories</h4>
